--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
- <h1>Hello, World!</h1>
+    <h1>Welcome to my website</h1>
+    <h1>Hello, World!</h1>
+
 </body>
 </html>
