--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my website</h1>
+    <h1 style="color:blue">Welcome to my website</h1>
     <h1>Hello, World!</h1>
     <h2> Thanks for visiting </h2>
 
