--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1 style="color:blue;font-size:20px;">Welcome to my website!!</h1>
+    <h1 style="color:blue;font-size:20px;">Welcome to my website!</h1>
     <h1>Hello, World!</h1>
     <h2> Thanks for visiting </h2>
 
